<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asgarov.ui.comparison.ComparisonFragment">

    <Button
        android:id="@+id/selectCountriesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/dark_purple"
        android:text="@string/select_countries"
        android:textColor="#212121"
        app:layout_constraintEnd_toStartOf="@id/selectIndicatorsButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/selectIndicatorsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/dark_purple"
        android:text="@string/select_indicators"
        android:textColor="#212121"
        app:layout_constraintEnd_toStartOf="@id/saveChartButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/selectCountriesButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/saveChartButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/dark_purple"
        android:text="@string/save_chart"
        android:textColor="#212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/selectIndicatorsButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/selectYearsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/darkest_purple"
        android:text="@string/select_years"
        android:textColor="#212121"
        app:layout_constraintEnd_toStartOf="@id/fetchDataButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectIndicatorsButton"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/fetchDataButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintTop_toBottomOf="@id/selectIndicatorsButton"
        app:layout_constraintStart_toEndOf="@id/selectYearsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        tools:ignore="VisualLintButtonSize" />

    <ImageButton
        android:id="@+id/barChartIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/vertical_bar_chart"
        android:minHeight="48dp"
        android:src="@drawable/bar_chart_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectYearsButton" />

    <ImageButton
        android:id="@+id/horizontalBarChartIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/horizontal_bar_chart"
        android:minHeight="48dp"
        android:src="@drawable/bar_chart_horizontal"
        app:layout_constraintStart_toEndOf="@id/barChartIcon"
        app:layout_constraintTop_toBottomOf="@id/selectYearsButton" />

    <ImageButton
        android:id="@+id/lineChartIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/line_chart"
        android:minHeight="48dp"
        android:src="@drawable/line_chart"
        app:layout_constraintStart_toEndOf="@id/horizontalBarChartIcon"
        app:layout_constraintTop_toBottomOf="@id/selectYearsButton" />

    <com.github.mikephil.charting.charts.BarChart
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:id="@+id/barChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/barChartIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"/>

    <com.github.mikephil.charting.charts.HorizontalBarChart
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:id="@+id/horizontalBarChart"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/barChartIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"/>

    <com.github.mikephil.charting.charts.LineChart
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:id="@+id/lineChart"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/barChartIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>