<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    tools:context=".FirstOnboardingFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        android:src="@drawable/_o_" />

    <ImageView
        android:id="@+id/ob_1_rectangular_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:importantForAccessibility="no"
        android:src="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ob_1_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_to_econvis"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/ob_1_rectangular_1"
        app:layout_constraintStart_toStartOf="@id/ob_1_rectangular_1"
        app:layout_constraintTop_toTopOf="@id/ob_1_rectangular_1" />

    <TextView
        android:id="@+id/ob_1_text_2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/discover_insights_into_economic_inequality_with_our_interactive_visualizations"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/ob_1_rectangular_1"
        app:layout_constraintStart_toStartOf="@id/ob_1_rectangular_1"
        app:layout_constraintTop_toBottomOf="@id/ob_1_text_1"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ob1_button1"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/next_"
        app:layout_constraintBottom_toBottomOf="@id/ob_1_rectangular_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/slider_indicator_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:importantForAccessibility="no"
        android:src="@drawable/slider_indicator_1"
        app:layout_constraintBottom_toTopOf="@id/ob1_button1"
        app:layout_constraintEnd_toEndOf="@id/ob_1_text_2"
        app:layout_constraintStart_toStartOf="@id/ob_1_text_2"
        app:layout_constraintTop_toBottomOf="@id/ob_1_text_1" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_language_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
