<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    tools:context=".SignUpOrLoginFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        android:src="@drawable/_o_" />


    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:importantForAccessibility="no"
        android:src="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_or_sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login_or_sign_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/image_view"
        app:layout_constraintStart_toStartOf="@id/image_view"
        app:layout_constraintTop_toTopOf="@id/image_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/image_view"
        app:layout_constraintStart_toStartOf="@id/image_view"
        app:layout_constraintTop_toBottomOf="@id/login_or_sign_up_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_an_account_button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_an_account"
        app:layout_constraintEnd_toEndOf="@id/image_view"
        app:layout_constraintStart_toStartOf="@id/image_view"
        app:layout_constraintTop_toBottomOf="@id/login_button" />


</androidx.constraintlayout.widget.ConstraintLayout>