<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NewPasswordFragment">


    <TextView
        android:id="@+id/text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:text="@string/your_new_password_must_be_different_from_previous_used_passwords"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/old_password_layout_reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_text"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_description">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="12dp"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:textColorHint="#424242"
            tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_layout_reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/old_password_layout_reset_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="12dp"
            android:textColorHint="#424242"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_12"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/reset_password_"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password_layout_reset_password"
        tools:ignore="VisualLintButtonSize" />


</androidx.constraintlayout.widget.ConstraintLayout>