<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordFragment">


    <TextView
        android:id="@+id/text_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email_and_we_will_send_you_a_link_to_reset_your_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout_reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/email_address_"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/mail_icon"
            android:drawablePadding="12dp"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:textColorHint="#949494"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="14dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/reset_password"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_layout_reset_password"
        tools:ignore="VisualLintButtonSize" />



</androidx.constraintlayout.widget.ConstraintLayout>