<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SecondOnboardingFragment">

    <ImageView
        android:src="@drawable/_o_"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/ob_2_rectangular_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rounded_rectangle"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="480dp"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/ob_2_text_1"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/ob_2_rectangular_1"
        app:layout_constraintEnd_toEndOf="@id/ob_2_rectangular_1"
        app:layout_constraintTop_toTopOf="@id/ob_2_rectangular_1"
        android:text="@string/explore_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/ob_2_text_2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/dive_into_comprehensive_data_sets_and_uncover_trends_in_economic_disparity"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/ob_2_rectangular_1"
        app:layout_constraintStart_toStartOf="@id/ob_2_rectangular_1"
        app:layout_constraintTop_toBottomOf="@id/ob_2_text_1"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ob_2_button_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/next_text_"
        app:layout_constraintBottom_toBottomOf="@id/ob_2_rectangular_1"
        android:layout_width="260dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toTopOf="@id/ob_2_button_1"
        app:layout_constraintTop_toBottomOf="@id/ob_2_text_1"
        android:src="@drawable/slider_indicator_2"
        android:id="@+id/slider_indicator_2"
        app:layout_constraintStart_toStartOf="@id/ob_2_text_2"
        app:layout_constraintEnd_toEndOf="@id/ob_2_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no" />

    <ImageView
        app:layout_constraintBottom_toTopOf="@id/ob_2_rectangular_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/illustration_image_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no" />



</androidx.constraintlayout.widget.ConstraintLayout>